fixed comment spacing issues on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -193,7 +193,17 @@ p{
 
     .input-names{
         display: grid;
-        grid-gap: 20px;
+        grid-gap: 10px;
         grid-template-columns: 1fr;
+    }
+
+    .comment{
+        width: 100%;
+        height: 100px;
+    }
+
+    .email{
+        width: 100%;
+        margin: 10px 0;
     }
 }
